--- a/sw_switch.ui
+++ b/sw_switch.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1271</width>
-    <height>924</height>
+    <width>1268</width>
+    <height>1062</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -47,7 +47,7 @@
       <x>100</x>
       <y>30</y>
       <width>371</width>
-      <height>251</height>
+      <height>321</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
@@ -88,6 +88,11 @@
          <string>ICMP</string>
         </property>
        </row>
+       <row>
+        <property name="text">
+         <string>port 80</string>
+        </property>
+       </row>
        <column>
         <property name="text">
          <string>IN</string>
@@ -105,10 +110,10 @@
    <widget class="QWidget" name="verticalLayoutWidget_2">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>290</y>
+      <x>90</x>
+      <y>370</y>
       <width>371</width>
-      <height>251</height>
+      <height>331</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -149,6 +154,11 @@
          <string>ICMP</string>
         </property>
        </row>
+       <row>
+        <property name="text">
+         <string>port 80</string>
+        </property>
+       </row>
        <column>
         <property name="text">
          <string>IN</string>
@@ -166,7 +176,7 @@
    <widget class="QLabel" name="port_1_label">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>10</x>
       <y>410</y>
       <width>55</width>
       <height>16</height>
@@ -179,7 +189,7 @@
    <widget class="QLabel" name="port_2_label">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>0</x>
       <y>150</y>
       <width>55</width>
       <height>16</height>
@@ -195,8 +205,8 @@
    <widget class="QPushButton" name="clearStats">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>570</y>
+      <x>100</x>
+      <y>710</y>
       <width>101</width>
       <height>41</height>
      </rect>
@@ -324,7 +334,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string>SET</string>
     </property>
    </widget>
    <widget class="QLabel" name="timeout">
@@ -338,6 +348,550 @@
     </property>
     <property name="text">
      <string>TextLabel</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnAddFilter">
+    <property name="geometry">
+     <rect>
+      <x>910</x>
+      <y>690</y>
+      <width>93</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>ADD</string>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="dstMac">
+    <property name="geometry">
+     <rect>
+      <x>570</x>
+      <y>470</y>
+      <width>181</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <item>
+     <property name="text">
+      <string>c2:03:1c:2c:00:01</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>ca:02:38:48:00:00</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>c2:01:3a:80:00:00</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>ANY</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>-</string>
+     </property>
+    </item>
+   </widget>
+   <widget class="QComboBox" name="srcMac">
+    <property name="geometry">
+     <rect>
+      <x>570</x>
+      <y>520</y>
+      <width>181</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <item>
+     <property name="text">
+      <string>c2:03:1c:2c:00:01</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>ca:02:38:48:00:00</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>c2:01:3a:80:00:00</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>ANY</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>-</string>
+     </property>
+    </item>
+   </widget>
+   <widget class="QComboBox" name="srcIP">
+    <property name="geometry">
+     <rect>
+      <x>570</x>
+      <y>570</y>
+      <width>181</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <item>
+     <property name="text">
+      <string>192.168.0.100</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>192.168.0.101</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>192.168.0.102</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>ANY</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>-</string>
+     </property>
+    </item>
+   </widget>
+   <widget class="QComboBox" name="dstIP">
+    <property name="geometry">
+     <rect>
+      <x>570</x>
+      <y>610</y>
+      <width>181</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <item>
+     <property name="text">
+      <string>192.168.0.100</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>192.168.0.101</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>192.168.0.102</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>ANY</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>-</string>
+     </property>
+    </item>
+   </widget>
+   <widget class="QComboBox" name="transportProto">
+    <property name="geometry">
+     <rect>
+      <x>570</x>
+      <y>650</y>
+      <width>181</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <item>
+     <property name="text">
+      <string>TCP</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>ICMP</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>UDP</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>ANY</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>-</string>
+     </property>
+    </item>
+   </widget>
+   <widget class="QLabel" name="label_9">
+    <property name="geometry">
+     <rect>
+      <x>490</x>
+      <y>610</y>
+      <width>79</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>DST IP</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_10">
+    <property name="geometry">
+     <rect>
+      <x>490</x>
+      <y>650</y>
+      <width>79</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>PROTOCOL</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_6">
+    <property name="geometry">
+     <rect>
+      <x>780</x>
+      <y>470</y>
+      <width>61</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>DST PORT</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_12">
+    <property name="geometry">
+     <rect>
+      <x>780</x>
+      <y>520</y>
+      <width>79</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>SRC PORT</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>490</x>
+      <y>470</y>
+      <width>79</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>DST MAC</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_5">
+    <property name="geometry">
+     <rect>
+      <x>490</x>
+      <y>520</y>
+      <width>79</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>SRC MAC</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_8">
+    <property name="geometry">
+     <rect>
+      <x>490</x>
+      <y>570</y>
+      <width>79</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>SRC IP</string>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="dstPort">
+    <property name="geometry">
+     <rect>
+      <x>870</x>
+      <y>470</y>
+      <width>191</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <item>
+     <property name="text">
+      <string>80</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>ANY</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>-</string>
+     </property>
+    </item>
+   </widget>
+   <widget class="QComboBox" name="srcPort">
+    <property name="geometry">
+     <rect>
+      <x>870</x>
+      <y>520</y>
+      <width>191</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <item>
+     <property name="text">
+      <string>80</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>ANY</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>-</string>
+     </property>
+    </item>
+   </widget>
+   <widget class="QLabel" name="label_7">
+    <property name="geometry">
+     <rect>
+      <x>780</x>
+      <y>560</y>
+      <width>71</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>ICMP TYPE</string>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="icmpType">
+    <property name="geometry">
+     <rect>
+      <x>870</x>
+      <y>560</y>
+      <width>191</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <item>
+     <property name="text">
+      <string>ANY</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>-</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>REQUEST</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>REPLY</string>
+     </property>
+    </item>
+   </widget>
+   <widget class="QLabel" name="label_11">
+    <property name="geometry">
+     <rect>
+      <x>780</x>
+      <y>600</y>
+      <width>55</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TYPE</string>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="type">
+    <property name="geometry">
+     <rect>
+      <x>870</x>
+      <y>600</y>
+      <width>191</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <item>
+     <property name="text">
+      <string>PERMIT</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>DENY</string>
+     </property>
+    </item>
+   </widget>
+   <widget class="QLabel" name="label_13">
+    <property name="geometry">
+     <rect>
+      <x>780</x>
+      <y>640</y>
+      <width>55</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>PORT</string>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="port">
+    <property name="geometry">
+     <rect>
+      <x>870</x>
+      <y>640</y>
+      <width>191</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_14">
+    <property name="geometry">
+     <rect>
+      <x>490</x>
+      <y>690</y>
+      <width>55</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>DIR</string>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="direction">
+    <property name="geometry">
+     <rect>
+      <x>570</x>
+      <y>690</y>
+      <width>73</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <item>
+     <property name="text">
+      <string>IN</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>OUT</string>
+     </property>
+    </item>
+   </widget>
+   <widget class="QTableWidget" name="filters">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>780</y>
+      <width>981</width>
+      <height>121</height>
+     </rect>
+    </property>
+    <column>
+     <property name="text">
+      <string>permit/deny</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>port</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>in/out</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>src MAC</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>src IP</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>dst MAC</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>dst IP</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Protocol</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>src PORT</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>dst PORT</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>ICMP TYPE</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>ID</string>
+     </property>
+    </column>
+   </widget>
+   <widget class="QPushButton" name="removeFilter">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>910</y>
+      <width>93</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>REMOVE</string>
     </property>
    </widget>
   </widget>
